--- a/mpm88.py.html
+++ b/mpm88.py.html
@@ -1,6 +1,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
+    <title>mpm88 | Taichi.js</title>
     <style>
     canvas {
         border: 1px solid black;
