--- a/simple_uv.py.html
+++ b/simple_uv.py.html
@@ -1,6 +1,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
+    <title>simple_uv | Taichi.js</title>
     <style>
     canvas {
         border: 1px solid black;
