--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <li><a href="./mpm88.py.html">mpm88</a></li>
         <li><a href="./simple_uv.py.html">simple_uv</a></li>
         <li><a href="./fractal.py.html">fractal</a></li>
+        <li><a href="./tree_gravity.py.html">tree_gravity</a></li>
     </ul>
 </body>
 </html>
